--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,11 @@
   font-family: "Poppins", sans-serif;
   color-scheme: dark;
 }
+
+html {
+  scroll-behavior: smooth;
+}
+
+section {
+  scroll-margin-top: 80px;
+}
